--- a/src/model/dune
+++ b/src/model/dune
@@ -2,4 +2,5 @@
  (name irc_model)
  (public_name irc.model)
  (inline_tests)
- (preprocess (pps visitors ppx_inline_test)))
+ (libraries irc.utils)
+ (preprocess (pps visitors.ppx)))
