--- a/src/internal_ppx/dune
+++ b/src/internal_ppx/dune
@@ -2,5 +2,5 @@
  (name irc_internal_ppx)
  (public_name irc.internal_ppx)
  (libraries ppx_deriving.api)
- (preprocess (action (run ppxfind -legacy ppx_tools.metaquot --as-pp %{deps})))
+ (preprocess (action (run ppxfind -legacy ppx_tools.metaquot --as-pp %{input-file})))
  (kind ppx_deriver))
