--- a/src/model/dune
+++ b/src/model/dune
@@ -2,5 +2,4 @@
  (name irc_model)
  (public_name irc.model)
  (inline_tests)
- (libraries irc.utils)
- (preprocess (pps irc.internal_ppx)))
+ (libraries irc.utils))
