--- a/src/client/dune
+++ b/src/client/dune
@@ -1,4 +1,5 @@
 (library
  (name irc_client)
  (public_name irc.client)
- (libraries irc.model irc.utils lwt))
+ (libraries irc.common irc.model lwt.unix)
+ (preprocess (pps lwt_ppx)))
