reorganize files - Client.Connection -> Helpers.Connection - Model.Helpers -> Helpers.Handler & Helpers.Command - the handler now takes the connection on each function (preparing for server implem)

--- a/src/dune
+++ b/src/dune
@@ -1,4 +1,5 @@
 (library
  (name irc)
  (public_name irc)
- (libraries irc.model irc.client))
+ (libraries irc.common irc.model irc.helpers)
+ (preprocess (pps lwt_ppx)))
